Fix success story image distortion with object-fit cover

--- a/app/assets/stylesheets/dashboard.scss
+++ b/app/assets/stylesheets/dashboard.scss
@@ -503,3 +503,6 @@
   color: #854F0B !important;
   border-color: #FFB627 !important;
 }
+
+.success-stories .bk-success-story-slider .slick-slide img {
+}
